--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ html{
 }
 
 .box-9 img{
+    overflow-x: hidden;
     width: 400px;
 }
 
@@ -224,6 +225,16 @@ html{
         width: 850px; 
     }
 
+    .box-8 img{
+        width: 180px;
+     }
+
+    .box-9 img{
+        overflow-x: hidden;
+        width: 300px;
+    }
+    
+
 }
 
 @media screen and (max-width:850px) {
@@ -255,7 +266,7 @@ html{
 
 @media screen and (max-width:750px) {
     .wrapper-gallery{
-        height: 72vh;
+        height: 62vh;
         width: 650px; 
     }
 
@@ -263,21 +274,34 @@ html{
 
 @media screen and (max-width:650px) {
     .wrapper-gallery{
-        height: 65vh;
+        height: 55vh;
         width: 550px; 
     }
 
+    .box-8 img{
+        width: 140px;
+     }
+
+    .box-9 img{
+        overflow-x: hidden;
+        width: 250px;
+    }
+    
 }
 
 
 
 @media screen and (max-width:620px) {
+
+    .wrapper-gallery{
+        height: 40vh;
+        width: 400px; 
+    }
+
     .box{
         width: 290px;
     }
-}
 
-@media screen and (max-width:620px) {
     .wrapper-cards{
         flex-direction: column;
         align-items: center;
